---------------------------------------------------------------------------------------------------
Version: 0.4.2
Date: ????
  Changes:
---------------------------------------------------------------------------------------------------
Version: 0.4.1
Date: 2021-03-21
  Bugfixes:
    - Fixed startup errors related to disabling warehouses while using Angel's Addons - Storage Options
---------------------------------------------------------------------------------------------------
Version: 0.4.0
Date: 2021-03-20
  Features:
    - Added setting "Adjust icon ordering" to improve sort order of buildings in Angel's Petrochemical Processing and Angel's Bioprocessing mods, default on
  Changes:
    - Substantial code cleanup and rework of entity creation
    - Updated how Angel numerals are handled; supports upcoming numeral rework in Angel's mods
    - Technology `bio-pressing-2` now handles upcoming changes in Angel's Bioprocessing
    - Locale updates to conform to upcoming locale changes in Angel's mods
    - Adjusted pollution for several refining, petrochemical and bioprocessing buildings added by this mod to be in-line with Angel's pollution values
    - Addjusted energy usage for several refining, petrochemical buildings to correct some inconsistencies with scaling
    - Adjusted module slot count for bioprocessing buildings added by this mod to 2 (inherited) to be in line with changes to Angel's Bioprocessing regarding modules
    - Corrected tier color progression for refining structures
    - Removed version numbers from dependency
---------------------------------------------------------------------------------------------------
Version: 0.3.13
Date: 2021-03-20
  Changes:
    - Patched for factorio 1.1
    - Updated to work with Angels Storage Options instead of the deprecated Warehouse mod
    - Removed conditional requires
---------------------------------------------------------------------------------------------------
Version: 0.3.12
Date: 2020-06-07