@@ -1,7 +1,8 @@
 ---------------------------------------------------------------------------------------------------
 Version: 0.4.2
-Date: ????
-  Changes:
+Date: 2021-03-21
+  Bugfixes:
+    - FIxed startup error when no Angel's Addons mods are present.
 ---------------------------------------------------------------------------------------------------
 Version: 0.4.1
 Date: 2021-03-21
